--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "material-icons": "^1.13.12",
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
     "vue": "^3.2.13",
