--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "material-icons": "^1.13.12",
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "vuex-persist": "^3.1.3"
